--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "wheelchairrentalsystem",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "database": "nodemon backend/server.js"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
+    "express": "^4.18.2",
     "json-server": "^1.0.0-alpha.23",
+    "nodemon": "^3.0.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "sequelize": "^6.37.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
